# qaq

./: .gitignore  AGENTS.md  pyproject.toml  qaq_fp16_debug2.py
configs/: README.md  llama31_8b_first_milestone.json  llama31_8b_first_milestone.toml  router_eval_real.json  router_eval_real_artifacts.json  router_train_llama31_8b_full_hellaswag.yaml  router_train_llama31_8b_sampled.yaml  router_train_real.yaml  router_train_smoke.yaml  smoke.json  smoke.toml
doc/: acceptance-contract.md  benchmark-integration-plan.md  current-state.md  debug-report.md  detailed-design.md  high-level-design.md  llama-bitplanes.md  problem-brief.md  prompt.md  proposal.md  qaq-reproduction-audit.md  repair-plan.md  repo-intake.md  repo-map.md  requirements.md  residual-risk.md  review.md  router-training.md  test-plan.md
doc/adr/: 0001-build-a-staged-research-prototype.md  0002-use-bit-plane-artifacts-for-quantized-weights.md  0003-use-mha-and-ffn-blocks-as-primary-precision-granularity.md  0004-separate-adaptive-routing-from-on-demand-loading.md  0005-use-synchronous-on-demand-loading-for-the-first-rebuild.md  0006-require-baseline-comparable-evaluation-for-accepted-qaq-results.md
qaq/: __init__.py  artifacts.py  benchmark_adapter.py  bitplanes.py  blocks.py  config.py  data.py  errors.py  evaluate.py  llama_bitplanes.py  loader.py  logging.py  manifest.py  metrics.py  model_adapter.py  precision_plan.py  prepare_bitplanes.py  progress.py  quantization.py  report.py  results.py  status.py  tensor_bitplanes.py
scripts/: gpu_run.py
tests/: __init__.py  test_scaffold.py
(+97 files in other folders)
